--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Template</title>
+	<title>Pandora Box</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	
 	<!-- CSS -->
-	<link type="text/css" rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto' rel='stylesheet' type='text/css'>
 
+	
+	<link type="text/css" rel="stylesheet/less" href="css/ui.less">
+	<link type="text/css" rel="stylesheet" href="css/style.css">
 	<!--[if lt IE 9]>
 	<script src="js/libs/html5-3.4-respond-1.1.0.min.js"></script>
 	<![endif]-->
 </head>
 <body>
-	<h1>Template</h1>
-
-	<script src="js/libs/jquery-1.11.2.min.js"></script>
-	<script src="js/box.js"></script>
-	<script src="js/app.js"></script>
+	<div class="paper up wrap page">
+		<h1>Pandora Box</h1>
+		<ul class="component-list list">
+			<li><a href="examples/ui.html" target="_blank">UI</a></li>
+			<li><a href="examples/softlight.html" target="_blank">SoftLight</a></li>
+			<li><a href="examples/parallax.html" target="_blank">Parallax</a></li>
+			<li><a href="examples/loader.html" target="_blank">Loader</a></li>
+		</ul>
+	</div>
+	<script src="js/vendors/less.min.js"></script>
 </body>
+</html>
