--- a/examples/softlight.html
+++ b/examples/softlight.html
@@ -10,100 +10,208 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		
 		<!-- CSS -->
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto' rel='stylesheet' type='text/css'>
+
+		
+		<link type="text/css" rel="stylesheet/less" href="../css/ui.less">
 		<link type="text/css" rel="stylesheet" href="../css/style.css">
 	</head>
 	<body>
 		<style type="text/css">
 			.softlightx{
-				opacity: 0;
+				xopacity: 0;
 			}
 		</style>
-		<div class="page clearfix softlight-page">
+		<div class="paper up wrap page">
 			<h1>Pandora SoftLight</h1>
 			<div class="presentation">Presentation</div>
 			<div class="row">
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx" data-softlight="x:300,delay : 500"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
-				<div class="col">
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
+					<div class="box-softlight softlightx"></div>
+				</div>
+				<div class="col-3">
 					<div class="box-softlight softlightx"></div>
 				</div>
 			</div>
 		</div>
-		<script src="../js/vendors/jquery-1.9.1.min.js"></script>
+		<script src="../js/vendors/less.min.js"></script>
+		<script src="../js/vendors/jquery-1.11.2.min.js"></script>
 		<script src="../js/pandora/box.js"></script>
+		<script src="../js/pandora/store.js"></script>
+		<script src="../js/pandora/utilities.js"></script>
 		<script src="../js/pandora/softlight.js"></script>
 		<script>
-			// App
-			PANDORA.open(function($){					
-				PANDORA.SOFTLIGHT.config({classSelection: 'softlightx'}).select();
-			});
+			Pandora.open([
+				'softlight'
+			], function(SoftLight){
+
+				setTimeout(function(){
+					SoftLight.select('','softlightx');
+				},1200);				
+
+			});			
 		</script>
 	</body>
 </html>
